--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,10 @@
-html,
+@import url("https://fonts.googleapis.com/css2?family=Parisienne&family=Poppins:wght@400;700&display=swap");
+
+/* html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
 }
 
 a {
@@ -14,3 +15,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.frontpage{
+  background: url(/public/frontPageImg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+} */
+
